Separating the models to other package
