# internal/adapter/in/http/api/system.go
@@ -1,0 +1,11 @@
+package api
+
+import "github.com/gin-gonic/gin"
+
+func (cs *ApiHandler) GetHealth(c *gin.Context) {
+
+}
+
+func (cs *ApiHandler) GetMetrics(c *gin.Context) {
+
+}
