# internal/core/domain/services/system.go
@@ -1,0 +1,7 @@
+package services
+
+import "context"
+
+func (c *domainServices) GetHealth(ctx context.Context) {
+
+}
